# pathtracer

./: Cargo.toml
basic/strom-color/: Cargo.toml
basic/strom-color/src/rgb/: mod.rs  normalized.rs  scaled.rs
basic/strom-macro/: Cargo.toml
basic/strom-macro/src/: lib.rs
basic/strom-vec/: Cargo.toml
basic/strom-vec/src/: lib.rs
image/strom-image-common/: Cargo.toml
image/strom-image-common/src/: buffered.rs  lib.rs
image/strom-ppm/: Cargo.toml
image/strom-ppm/src/: lib.rs
strom/: Cargo.toml
strom-progress/: Cargo.toml
strom-progress/src/: lib.rs
strom-scene-definition/parser-test/: Cargo.toml
strom/examples/: crate_ppm_export.rs  ppm_export.rs
